--- a/bower.json
+++ b/bower.json
@@ -3,9 +3,9 @@
   "_cacheHeaders": {
     "Content-Type": "text/html; charset=utf-8"
   },
-  "main": "index",
+  "main": "jquery.scrollit.js",
   "_source": "https://gist.github.com/mindfullsilence/cfcc9d99c8c6dd4357b0",
-  "_target": "*",
+  "_target": "jquery.scrollit.js/*",
   "_originalSource": "https://gist.github.com/mindfullsilence/cfcc9d99c8c6dd4357b0",
   "_direct": true
 }
